# qjoin

./: .dockerignore  .env.template  .gitignore  .gitpod.yml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  launch.json  pyproject.toml
.github/workflows/: main.yml  publish.yml
alfred/: ci.py  dist.py  docker.py  docs.py  lint.py  publish.py  tests.py
docs/: README.md  api.rst  collections.rst  conf.py  diagram.drawio  getting_started.rst  index.rst  joins.rst  user_guide.rst
src/qjoin/: __init__.py  logger.py  main.py
tests/: test_qjoin.py
tests/units/: test_simple.py
